WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181114
REGRESSION(
r223678
): Cannot copy & paste a web page content into Yahoo! Mail
https://bugs.webkit.org/show_bug.cgi?id=181114
Summary
REGRESSION(r223678): Cannot copy & paste a web page content into Yahoo! Mail
Ryosuke Niwa
Reported
2017-12-21 18:21:09 PST
* STEPS TO REPRODUCE 1. Launch Safari 2. Navigate to
https://mail.yahoo.com/
3. Sign in with valid credentials 4. Click Compose button 5. New Window (⌘N) 6. Navigate to
https://1stwebdesigner.com/image-file-types/
7. Copy a combination of text and an image from the new window and paste it into Yahoo’s compose window * EXPECTED RESULTS Text and image should be displayed in Yahoo’s compose window * ACTUAL RESULTS Text is displayed as expected, but the image is lost <
rdar://problem/35547066
>
Attachments
Avoids blob conversion for HTTP/HTTPs
(15.90 KB, patch)
2017-12-21 18:57 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Rebaselined the test
(16.48 KB, patch)
2017-12-21 19:47 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(2.50 MB, application/zip)
2017-12-21 20:42 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews102 for mac-elcapitan
(2.15 MB, application/zip)
2017-12-21 20:43 PST
,
EWS Watchlist
no flags
Details
Added the forgotten test file
(17.74 KB, patch)
2017-12-21 21:01 PST
,
Ryosuke Niwa
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-12-21 18:57:30 PST
Created
attachment 330090
[details]
Avoids blob conversion for HTTP/HTTPs
Ryosuke Niwa
Comment 2
2017-12-21 19:47:43 PST
Created
attachment 330095
[details]
Rebaselined the test
EWS Watchlist
Comment 3
2017-12-21 20:42:13 PST
Comment on
attachment 330095
[details]
Rebaselined the test
Attachment 330095
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5797468
New failing tests: http/tests/security/clipboard/copy-paste-html-cross-origin-iframe-across-origin.html
EWS Watchlist
Comment 4
2017-12-21 20:42:15 PST
Created
attachment 330103
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 5
2017-12-21 20:43:57 PST
Comment on
attachment 330095
[details]
Rebaselined the test
Attachment 330095
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5797725
New failing tests: http/tests/security/clipboard/copy-paste-html-cross-origin-iframe-across-origin.html
EWS Watchlist
Comment 6
2017-12-21 20:43:58 PST
Created
attachment 330104
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 7
2017-12-21 21:01:44 PST
Created
attachment 330106
[details]
Added the forgotten test file
Geoffrey Garen
Comment 8
2017-12-22 12:15:37 PST
Comment on
attachment 330106
[details]
Added the forgotten test file View in context:
https://bugs.webkit.org/attachment.cgi?id=330106&action=review
r=me
> Source/WebCore/ChangeLog:12 > + We've also considered using data URLs instead of blob URLs for conversion but pasing a large image converted into
pasting
> Source/WebCore/ChangeLog:17 > + cross-origin content, restoring the behavior prior to For contents converted from attributed strings, we continue to convert to blob URL since
prior to...?
Ryosuke Niwa
Comment 9
2017-12-22 12:40:09 PST
(In reply to Geoffrey Garen from
comment #8
)
> Comment on
attachment 330106
[details]
> Added the forgotten test file > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=330106&action=review
> > r=me > > > Source/WebCore/ChangeLog:12 > > + We've also considered using data URLs instead of blob URLs for conversion but pasing a large image converted into > > pasting
Fixed.
> > Source/WebCore/ChangeLog:17 > > + cross-origin content, restoring the behavior prior to For contents converted from attributed strings, we continue to convert to blob URL since > > prior to...?
Weird. It should have said. "prior to
r223678
".
Ryosuke Niwa
Comment 10
2017-12-22 12:41:51 PST
Committed
r226272
: <
https://trac.webkit.org/changeset/226272
>
Radar WebKit Bug Importer
Comment 11
2017-12-22 12:42:30 PST
<
rdar://problem/36197320
>
Wenson Hsieh
Comment 12
2017-12-22 16:49:38 PST
Comment on
attachment 330106
[details]
Added the forgotten test file View in context:
https://bugs.webkit.org/attachment.cgi?id=330106&action=review
> Source/WebCore/ChangeLog:10 > + Yahoo! Mail, Gmail, and other major online email services.
I think the attachment element generation codepath would also want to follow these same rules (this would make the Mail folks happy, since they prefer pasted http: and https: image URLs to not become image attachments, but rather stay as remote images). I'll tweak this in a followup...
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug